--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -424,6 +424,11 @@ gap: 2rem;
 
 }
 
+.skills__list{
+    row-gap: 1.5rem;
+    padding-left: 2.7rem;
+}
+
 .skills__titles{
     display: flex;
     justify-content: space-between;
@@ -456,11 +461,127 @@ gap: 2rem;
     width: 90%;
 }
 .skills__css{
-    width: 90%;
+    width: 80%;
 }
+.skills__js{
+    width: 60%;
+}
+.skills__react{
+    width: 85%;
+}
+.skills__php{
+    width: 80%;
+}
+
+.skills__node{
+    width: 70%;
+}
+.skills__firebase{
+    width: 70%;
+}
+
+.skills__python{
+    width: 70%;
+}
+
+.skills__figma{
+    width: 70%;
+}
+.skills__sketch{
+    width: 70%;
+}
+.skills__photoshop{
+    width: 70%;
+}
+
+.skills__close .skills__list{
+height: 0;
+overflow: hidden;
+}
+
+.skills__open .skills__list{
+    height: max-content;
+    margin-bottom: var(--mb-2-5);
+}
+
+.skills__open .skills__arrow{
+    transform: rotate(-180deg);
+}
+
 /*==================== QUALIFICATION ====================*/
+.qualification__tabs{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--mb-2);
+}
 
 
+.qualification__buttons{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    cursor: pointer;
+}
+
+.qualification__buttons:hover{
+    color: var(--first-color);
+}
+
+.qualification__icon{
+    font-size: 1.8rem;
+    margin-right: var(--mb-0-25);
+}
+
+.qualification__data{
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem ;
+
+}
+
+.qualification__title{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+    
+}
+
+.qualification__subtitle{
+    display: inline-block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-1);
+}
+
+.qualification__calendar{
+    font-size: var(--smaller-font-size);
+    color: var(--text-color-light);
+}
+
+.qualification__rounder{
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background-color: var(--first-color);
+    border-radius: 50%;
+}
+
+.qualification__line{
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: var(--first-color);
+    transform: translate(6px,  -7px);
+}
+
+.qualification [data-content]{
+    display: none;
+}
+
+.qualification__active[data-content]{
+    display: block;
+}
+
+.qualification__buttons.qualification__active{
+    color: var(--first-color);
+}
 /*==================== SERVICES ====================*/
 
 
