--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,9 @@
     --input-color:  hsl(var(--hue-color), 70%, 96%);
     --body-color:  hsl(var(--hue-color), 60%, 99%);
     --container-color: #fff;
+    --scroll-bar-color:  hsl(var(--hue-color), 12%, 90%);
+    --scroll-thumb-color:  hsl(var(--hue-color), 12%, 80%);
+
 
     /*========== Font and typography ==========*/
     --body-font:  'Poppins', sans-serif;;
@@ -68,10 +71,34 @@
 }
 
 /*========== Variables Dark theme ==========*/
-
+body.dark-theme{
+ 
+    --first-color-second: hsl(var(--hue-color), 30%, 8%) ;
+    --title-color:  hsl(var(--hue-color), 8%, 95%);
+    --text-color:  hsl(var(--hue-color), 8%, 75%);
+    --input-color:  hsl(var(--hue-color), 29%, 16%);
+    --body-color:  hsl(var(--hue-color), 28%, 12%);
+    --container-color: hsl(var(--hue-color), 29%, 16%);
+    --scroll-bar-color:  hsl(var(--hue-color), 12%, 48%);
+    --scroll-thumb-color:  hsl(var(--hue-color), 12%, 36%);
+}
 
 /*========== Button Dark/Light ==========*/
+.nav__btns{
+    display: flex;
+    align-items: center;
+}
 
+.change-theme{
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1);
+    cursor: pointer;
+}
+
+.change-theme:hover{
+    color: var(--first-color);
+}
 
 /*==================== BASE ====================*/
 *{
@@ -183,7 +210,7 @@ img{
         left: 0;
         width: 100%;
         background-color: var(--body-color);
-        padding: 2rem 1.5rem 4rem;
+        padding: 2rem 1.5rem 2rem;
         box-shadow: 0 -1px 4px rgba(0,0,0,.15);
         border-radius: 1.5rem 1.5rem 0 0;
         transition: .3s;
@@ -233,11 +260,15 @@ gap: 2rem;
     bottom: 0;
 }
 /* Active link */
-
+.active-link{
+    color: var(--first-color);
+}
 
 /* Change background header */
 
-
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0,0,0,.15);
+}
 /*==================== HOME ====================*/
 .home__container{
     gap: 1rem;
@@ -344,6 +375,19 @@ gap: 2rem;
     align-items: center;
 }
 
+.button--small{
+    padding: .75rem 1rem;
+}
+ .button--link{
+     padding: 0;
+     background-color: transparent ;
+     color: var(--first-color);
+ }
+
+ .button--link:hover{
+     background-color: transparent ;
+     color: var(--first-color-alt);
+ }
 /*==================== ABOUT ====================*/
 .about__img{
     width: 300px;
@@ -583,13 +627,170 @@ overflow: hidden;
     color: var(--first-color);
 }
 /*==================== SERVICES ====================*/
+.services__container{
+    gap: 1.5rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.services__content{
+    position: relative;
+    background-color: var(--container-color);
+    padding: 3.5rem .5rem 1.25rem 1.5rem;
+    border-radius: .25rem;
+    box-shadow:0 2px 4px rgba(0, 0, 0,.75) ;
+    transition: .3s;
+}
+
+.services__content:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0,.75);
+}
+
+.services__icon{
+    display: block;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    margin-bottom: var(--mb-1) ;
+}
 
 
+.services__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-medium);
+}
+
+.services__button{
+    cursor: pointer;
+    font-size: var(--small-font-size);
+
+
+}
+
+.services__button:hover .button__icon{
+transform: translateX(.25rem) ;
+}
+
+.services__modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+    z-index: var(--z-modal);
+    opacity: 0;
+    visibility: hidden;
+    transition: .4s;
+}
+
+
+.services__modal-content{
+        position: relative;
+        background-color: var(--container-color);
+        padding: 1.5rem;
+        border-radius: .5rem;
+
+}
+
+.services__modal-services{
+    row-gap: 1rem;
+}
+
+.services__modal-service{
+    display: flex;
+}
+
+.services__modal-title{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-1-5);
+}
+
+.services__modal-close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    cursor: pointer;
+}
+
+.services__modal-icon{
+    color: var(--first-color);
+    margin-right: var(--mb-0-25);
+}
 /* Active Modal */
-
+.active-modal{
+    opacity: 1;
+    visibility: visible;
+    
+}
 
 /*==================== PORTFOLIO ====================*/
 
+.portflio__container{
+    overflow: initial;
+}
+
+.portfolio__content{
+    padding: 0 1.5rem;
+}
+
+.portfolio__img{
+    width: 265px;
+    border-radius: .5rem;
+    justify-self: center;
+}
+
+.portfolio__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+
+.portfolio__description{
+     margin-bottom: var(--mb-0-75);
+
+}
+
+.portfolio__button:hover .button__icon{
+transform: translateX(.25rem);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after{
+    content:'' ;
+}
+
+.swiper-portfolio-icon{
+    font-size: 2rem;
+    color: var(--first-color);
+}
+
+.swiper-button-prev{
+    left: -.5rem;
+}
+.swiper-button-next{
+    right: -.5rem;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets{
+    bottom: -1rem;
+}
+
+.swiper-pagination-bullet-active{
+    background-color: var(--first-color);
+}
+
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination-bullets{
+    outline: none;
+}
 
 /*==================== PROJECT IN MIND ====================*/
 
@@ -598,25 +799,330 @@ overflow: hidden;
 
 
 /*==================== CONTACT ME ====================*/
+.contact__container{
+    row-gap: 3rem;
+}
 
+.contact__information{
+    display: flex;
+    margin-bottom: var(--mb-2);
+}
 
+.contact__icon{
+    font-size: 2rem;
+    color: var(--first-color);
+    margin-right: var(--mb-0-75);
+}
+
+.contact__title{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+}
+
+.contact__subtitle{
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
+}
+
+.contact__content{
+    background-color: var(--input-color);
+    border-radius: .5rem ;
+    padding: .75rem 1rem .25rem ;
+}
+
+.contact__label{
+    font-size: var(--smaller-font-size);
+    color: var(--title-color);
+}
+
+.contact__input{
+    width: 100%;
+    background-color: var(--input-color);
+    color: var(--text-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    border: none;
+    outline: none;
+    padding: .25rem .5rem .5rem 0;
+}
 /*==================== FOOTER ====================*/
+.footer{
+    padding-top: 2rem;
+}
+
+.footer__container{
+    row-gap: 3.5rem;
+}
+
+.footer__bg{
+    background-color: var(--first-color-second);
+    padding: 2rem 0 3rem;
+}
 
 
+.footer__title{
+    font-size: var(--h1-font-size);
+    margin-bottom: var(--mb-0-25);
+
+}
+
+.footer__subtitle{
+    font-size: var(--small-font-size);
+
+}
+
+
+.footer__links{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+}
+
+
+
+.footer__link:hover{
+    color: var(--first-color-lighter);
+}
+
+.footer__social{
+    font-size: 1.25rem;
+    margin-right: var(--mb-1-5);
+}
+
+.footer__social:hover{
+    color: var(--first-color-lighter);
+}
+
+.footer__copy{
+    font-size: var(--smaller-font-size);
+    text-align: center;
+    color: var(--text-color-light);
+    margin-top: var(--mb-3);
+}
+
+.footer__title,
+.footer__subtitle,
+.footer__link,
+.footer__social{
+    color: #FFF;
+     
+}
 /*========== SCROLL UP ==========*/
+.scrollup{
+    position: fixed;
+    right: 1rem;
+    bottom: -20%;
+    background-color: var(--first-color);
+    opacity: .8;
+    padding: 0 .3rem;
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition: .4s;
+}
 
+.scrollup:hover{
+    background-color: var(--first-color-alt);
+
+}
+
+.scrollup__icon{
+    font-size: 1.5rem;
+    color: #FFF;
+}
 
 /* Show scroll */
-
+.show-scroll{
+    bottom: 5rem;
+}
 
 /*========== SCROLL BAR ==========*/
+::-webkit-scrollbar{
+    width: .60rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+}
 
 
+::webkit-scrollbar-thumb:hover{
+    background-color: var(--text-color-light);
+}
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
+@media screen and (max-width: 350px){
+    .container{
+        margin-left: var(--mb-3);
+        margin-right: var(--mb-1);
+    }
 
+    .nav__container{
+        padding-left: 1rem;
+    }
+    .nav__logo{
+        margin-left: 10px;
+    }
+    .nav__toggle{
+        margin-right: 10px;
+    }
+
+    .nav__menu{
+        padding: 2rem .25rem 4rem;
+    }
+
+    .nav__list{
+
+        column-gap: 0;
+    }
+       .home__content{
+           grid-template-columns: .25fr 3fr;
+       }
+
+       .home__blob{
+           width: 180px;
+       }
+    .skills__title{
+        font-size: var(--normal-font-size);
+    }
+
+    .qualification__data{
+        gap: .5rem;
+    }
+
+    .services__container{
+        grid-template-columns: max-content;
+        justify-content: center;
+    }
+    .services__content{
+        padding-right: 3.5rem;
+
+    }
+    .services__modal{
+        padding: 0 .5rem;
+
+    }
+    .contact__inside{
+        padding-left: 1.5rem;
+    }
+
+    
+}
 
 /* For medium devices */
+@media screen and (min-width: 568px){
+    .home__content{
+        grid-template-columns: max-content 1fr 1fr;
+    }
+    .home__data{
+        grid-column: initial;
+    }
+
+    .home__img{
+        order: 1;
+        justify-self: center;
+    }
+    
+    .about__container,
+    .skills__container,
+    .portfolio__content,
+    .project__container,
+    .contact__container,
+    .footer__container
+    {
+        grid-template-columns: repeat(2, 1fr);
+    }
+  
+    .qualification__sections{
+        display: grid;
+        grid-template-columns: .6fr;
+        justify-content: center;
+
+    }
+    .footer__links{
+        padding-left: 50%;
+    }
+    .nav__logo{
+        margin-left: 10px;
+    }
+    .nav__toggle{
+        margin-right: 10px;
+    }
+    
+}
 
 
+
+
+/* For large devices */
+@media screen and (min-width: 768px){
+    .container{
+        margin-left: auto;
+        margin-right:auto ;
+    }
+
+body{
+    margin: 0;
+}
+
+.section{
+    padding: 6rem 0 2rem;
+}
+    .section__subtitle{
+        margin-bottom: 4rem;
+    }
+
+    .header{
+        top: 0;
+        bottom: initial;
+    }
+
+    .header,
+    .main,
+    .footer__container{
+        padding:0 1rem;
+    }
+    
+    .nav{
+        height: calc(var(--header-height) + 1.5rem);
+        column-gap: 1rem;
+    }
+
+    .nav__menu{
+   margin-left: auto;
+   display: flex;
+   
+    }
+    .nav__btns{
+        display: flex;
+        margin-left: auto;
+        
+    }
+
+    .change-theme{
+        margin: 0;
+    }
+
+    .nav__list{
+        grid-template-columns: repeat(6, 1fr);
+        gap: 1rem;
+       
+        
+        }
+        .header{
+            margin-right: 0px;
+        }
+
+    .nav__close{
+        display: none;
+    }
+    .nav__toggle{
+        display: none;
+    }
+   
+
+  
+}
 /* For large devices */
