--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,8 +136,22 @@ img{
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section{
     padding: 2rem 2rem 4rem;
-}
+    margin-top: 150px;
+    padding-top: 100px;
 
+}
+.about__section{
+    margin-top: 335px;
+    padding-top: 100px;
+}
+.skills__section{
+    margin-top: 335px;
+    padding-top: 100px;
+}
+.qualification__section{
+    margin-top: 335px;
+    padding-top: 100px;
+}
 .section__title{
     font-size: var(--h1-font-size);
 }
@@ -301,7 +315,7 @@ gap: 2rem;
 }
 
 .home__blob-img{
-    width: 170px;
+    width: 250px;
 }
 
 .home__data{
@@ -429,6 +443,7 @@ gap: 2rem;
 .about__buttons{
     display: flex;
     justify-content: center;
+    margin-left: 20px;
     
 }
 
