--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -134,24 +134,7 @@ img{
     height: auto;
 }
 /*==================== REUSABLE CSS CLASSES ====================*/
-.section{
-    padding: 2rem 2rem 4rem;
-    margin-top: 150px;
-    padding-top: 100px;
 
-}
-.about__section{
-    margin-top: 335px;
-    padding-top: 100px;
-}
-.skills__section{
-    margin-top: 335px;
-    padding-top: 100px;
-}
-.qualification__section{
-    margin-top: 335px;
-    padding-top: 100px;
-}
 .section__title{
     font-size: var(--h1-font-size);
 }
@@ -228,6 +211,21 @@ img{
         box-shadow: 0 -1px 4px rgba(0,0,0,.15);
         border-radius: 1.5rem 1.5rem 0 0;
         transition: .3s;
+    }
+    .section{
+        padding: 2rem 2rem 4rem;
+        margin-top: 150px;
+        padding-top: 100px;
+    
+    }
+    .about__section{
+        margin-top: 150px;
+    }
+    .skills__section{
+        margin-top: 150px;
+    }
+    .qualification__section{
+        margin-top: 150px;
     }
 }
 
@@ -879,7 +877,11 @@ transform: translateX(.25rem);
     padding: 2rem 0 3rem;
 }
 
-
+.footer_container{
+    height: 10px;
+    width: 350px;
+    margin: auto;
+}
 .footer__title{
     font-size: var(--h1-font-size);
     margin-bottom: var(--mb-0-25);
@@ -979,7 +981,20 @@ transform: translateX(.25rem);
         margin-right: var(--mb-1);
     }
 
-
+    .section{
+        padding: 2rem 2rem 4rem;
+        margin-top: 0px;
+    
+    }
+    .about__section{
+        margin-top: 150px;
+    }
+    .skills__section{
+        margin-top: 150px;
+    }
+    .qualification__section{
+        margin-top: 150px;
+    }
 
     .nav__container{
         padding-left: 1rem;
@@ -1088,6 +1103,20 @@ transform: translateX(.25rem);
     .contact__information{
         padding: 1rem;
     }
+    .section{
+        padding: 2rem 2rem 4rem;
+        
+    
+    }
+    .about__section{
+        margin-top: 150px;
+    }
+    .skills__section{
+        margin-top: 150px;
+    }
+    .qualification__section{
+        margin-top: 150px;
+    }
     
 }
 
@@ -1100,7 +1129,20 @@ transform: translateX(.25rem);
         margin-left: auto;
         margin-right:auto ;
     }
-
+    .section{
+        padding: 2rem 2rem 4rem;
+       
+    
+    }
+    .about__section{
+        margin-top: 150px;
+    }
+    .skills__section{
+        margin-top: 150px;
+    }
+    .qualification__section{
+        margin-top: 150px;
+    }
 body{
     margin: 0;
 }
@@ -1323,6 +1365,7 @@ body{
 
 
 @media screen and (min-width: 1490px){
+    
 
     .home__social{
         transform: translateX(1000%);
@@ -1341,6 +1384,23 @@ body{
  .about__buttons{
        transform: translateX(-20px);
    }
+   .section{
+    padding: 2rem 2rem 4rem;
+    margin-top: 150px;
+    padding-top: 100px;
 
+}
+.about__section{
+    margin-top: 335px;
+    padding-top: 100px;
+}
+.skills__section{
+    margin-top: 335px;
+    padding-top: 100px;
+}
+.qualification__section{
+    margin-top: 335px;
+    padding-top: 100px;
+}
 
 }
