Updates to style.css made it work for iphone 12 pro

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -214,7 +214,7 @@ img{
     }
     .section{
         padding: 2rem 2rem 4rem;
-        margin-top: 150px;
+        /*margin-top: 150px;*/
         padding-top: 100px;
     
     }
@@ -886,6 +886,7 @@ transform: translateX(.25rem);
 .footer__title{
     font-size: var(--h1-font-size);
     margin-bottom: var(--mb-0-25);
+    text-align: center;
 
 }
 
@@ -1056,7 +1057,12 @@ transform: translateX(.25rem);
 
     
 }
+@media screen and (max-width: 390px){
 
+    .contact__information{
+        margin-left: 25%;
+    }
+}
 /* For medium devices */
 @media screen and (min-width: 568px){
     .home__content{
