--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,7 +28,7 @@
     --body-font:  'Poppins', sans-serif;;
 
     /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
-    --big-font-size: 2rem;
+    --big-font-size: 3rem;
     --h1-font-size: 1.5rem;
     --h2-font-size: 1.25rem;
     --h3-font-size: 1.125rem;
@@ -223,6 +223,7 @@ img{
     }
     .skills__section{
         margin-top: 150px;
+        margin-bottom: 150px;
     }
     .qualification__section{
         margin-top: 150px;
@@ -302,6 +303,8 @@ gap: 2rem;
 .home__social-icon{
     font-size: 1.25rem;
     color: var(--first-color);
+    padding: 5px;
+    margin-top: 1rem;
 }
 
 .home__social-icon:hover{
@@ -322,14 +325,14 @@ gap: 2rem;
 }
 
 .home__title{
-    font-size: var(--big-font-size);
+    font-size: 4rem;
 }
 
 .home__subtitle{
-    font-size: var(--h3-font-size);
+    font-size: 1.7rem;
     columns: var(--text-color);
     font-weight: var(--font-medium);
-    margin-bottom: var(--mb-0-75);
+    margin: bottom 1rem;
 }
 
 
@@ -993,6 +996,8 @@ transform: translateX(.25rem);
     }
     .skills__section{
         margin-top: 150px;
+        margin-bottom: 150px;
+
     }
     .qualification__section{
         margin-top: 150px;
@@ -1124,6 +1129,8 @@ transform: translateX(.25rem);
     }
     .skills__section{
         margin-top: 150px;
+        margin-bottom: 150px;
+
     }
     .qualification__section{
         margin-top: 150px;
@@ -1150,6 +1157,8 @@ transform: translateX(.25rem);
     }
     .skills__section{
         margin-top: 150px;
+        margin-bottom: 150px;
+
     }
     .qualification__section{
         margin-top: 150px;
@@ -1197,7 +1206,7 @@ body{
     }
 
     .nav__list{
-        grid-template-columns: repeat(6, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         gap: 1rem;
        
         
@@ -1232,6 +1241,13 @@ body{
        margin-left: 3rem;
    }
 
+   .home__data{
+    transform: translateX(2%);
+}
+    .home__img{
+        transform: translateX(-40%);
+
+    }
    .about__img{
        width: 350px;
    }
@@ -1303,9 +1319,7 @@ body{
     .home__social{
         transform: translateX(9rem);
     }
-    .home__data{
-        transform: translateX(42%);
-    }
+   
 
     .contact__inside{
       display: flex;
@@ -1333,7 +1347,13 @@ body{
         width: 320px;
     }
   
-
+    .home__data{
+        transform: translateX(12%);
+    }
+        .home__img{
+            transform: translateX(20%);
+    
+        }
     
    
 
@@ -1373,24 +1393,31 @@ body{
         transform: translateX(-20px);
     }
 }
-
+@media screen and (min-width: 1200px){
+    .home__data{
+        transform: translateX(32%);
+    }
+        .home__img{
+            transform: translateX(40%);
+    
+        }
+}
 
 @media screen and (min-width: 1490px){
     
-
+    .home__img {
+        transform: translateX(50%);
+    }
     .home__social{
         transform: translateX(1000%);
         float: left;
     }
 
  .home__data{
-        transform: translateX(60%);
+        transform: translateX(50%);
     }
 
-  .home__img{
-        transform: translateX(-60%);
-    }
-
+ 
   
  .about__buttons{
        transform: translateX(-20px);
@@ -1408,10 +1435,22 @@ body{
 .skills__section{
     margin-top: 335px;
     padding-top: 100px;
+    margin-bottom: 335px;
+
 }
 .qualification__section{
     margin-top: 335px;
     padding-top: 100px;
 }
+
+}
+
+@media screen and (min-width: 1620px){
+    .home__img {
+        transform: translateX(80%);
+    }
+    .home__data{
+        transform: translateX(80%);
+    }
 
 }
